# midiland

./: .gitignore  HOWTO.md  README.md  build_dataset_tokens.py  colab_example.ipynb  download_hf_dataset.py  lm_model.py  make_windows.py  midi_io.py  midi_parser.py  midi_roundtrip.py  midi_writer.py  model.py  preprocess_dataset.py  pyproject.toml  requirements.txt  sample.py  sample_lm.py  tokenizer.py  tokens_25.npy  tokens_to_midi.py  train.py  train_lm.py  window_dataset.py
docs/: HOWTO.md  current_midi_pipeline.md
midiland/: __init__.py  lm_model.py  midi_io.py  tokenizer.py
midiland/cli/: __init__.py  download_hf_dataset.py  make_windows.py  midi_roundtrip.py  midi_writer.py  preprocess_dataset.py  sample_lm.py  sample_midi.py  train_lm.py
